# server-demo

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
scripts/: run_apiserver.sh  run_database_test.sh  run_mysql_server.sh
src/: config.toml  main.py  schemas.py
src/connectors/: __init__.py  node_names.py  openml.py  platforms.py
src/connectors/abstract/: dataset_connector.py  publication_connector.py
src/connectors/example/: example_dataset_connector.py  example_publication_connector.py
src/connectors/huggingface/: huggingface_dataset_connector.py
src/connectors/openml/: openml_dataset_connector.py
src/database/: __init__.py  models.py  readme.md  setup.py
src/tests/: conftest.py  requirements.txt  test_delete_datasets.py  test_get_dataset_huggingface.py  test_get_dataset_openml.py  test_get_dataset_unimplemented.py  test_get_datasets.py  test_get_nodes.py  test_get_publication.py  test_get_publications.py  test_get_publications_of_dataset.py  test_get_publications_using_dataset.py  test_post_datasets.py  test_post_register_dataset.py  test_put_datasets.py
src/tests/database/: test_populate_database.py
src/tests/resources/connectors/huggingface/: data_list.json  first_row_rotten_tomatoes.json  parquet_rotten_tomatoes.json  splits_04-07-22|wep-probes.json  splits_0n1xus|codexglue.json  splits_rotten_tomatoes.json
src/tests/resources/connectors/openml/: data_1.json  data_1_qualities.json  data_list.json
src/tests/testutils/: mocking.py  paths.py
